--- a/package.json
+++ b/package.json
@@ -10,19 +10,17 @@
     "dremel",
     "parquet"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/ironSource/parquetjs.git"
-  },
   "dependencies": {
     "brotli": "^1.3.0",
     "bson": "^2.0.4",
     "int53": "^0.2.4",
-    "lzo": "^0.4.0",
     "object-stream": "0.0.1",
     "snappyjs": "^0.6.0",
-    "thrift": "^0.10.0",
+    "thrift": "^0.11.0",
     "varint": "^5.0.0"
+  },
+  "optionalDependencies": {
+    "lzo": "^0.4.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
