--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "thrift": "^0.11.0",
     "varint": "^5.0.0"
   },
+  "optionalDependencies": {
+    "lzo": "0.4.0"
+  },
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.2.0"
