--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "parquet"
   ],
   "dependencies": {
+    "async-mutex": "^0.2.2",
     "brotli": "^1.3.0",
     "bson": "^2.0.4",
     "int53": "^0.2.4",
