--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "parquet"
   ],
   "dependencies": {
-    "async-mutex": "^0.2.2",
     "brotli": "^1.3.0",
     "bson": "^2.0.4",
     "int53": "^0.2.4",
     "object-stream": "0.0.1",
     "snappyjs": "^0.6.0",
     "thrift": "^0.11.0",
-    "varint": "^5.0.0"
+    "varint": "^5.0.0",
+    "make": "^.8.1"
   },
   "optionalDependencies": {
-    "lzo": "0.4.0"
+    "lzo": "0.4.11"
   },
   "devDependencies": {
     "chai": "^4.1.2",
