--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "snappyjs": "^0.6.0",
     "thrift": "^0.11.0",
     "varint": "^5.0.0",
-    "make": "^.8.1"
+    "make": "^0.8.1"
   },
   "optionalDependencies": {
     "lzo": "0.4.11"
