--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "object-stream": "0.0.1",
     "snappyjs": "^0.6.0",
     "thrift": "^0.11.0",
-    "varint": "^5.0.0",
-    "lzo": "0.4.0"
+    "varint": "^5.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
