--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "parquetjs",
   "description": "fully asynchronous, pure JavaScript implementation of the Parquet file format",
   "main": "parquet.js",
-  "version": "0.8.0",
-  "homepage": "https://github.com/ironSource/parquetjs",
-  "author": "ironSource <npm@ironsrc.com>",
   "license": "MIT",
   "keywords": [
     "dremel",
@@ -17,16 +14,11 @@
     "object-stream": "0.0.1",
     "snappyjs": "^0.6.0",
     "thrift": "^0.11.0",
-    "varint": "^5.0.0"
+    "varint": "^5.0.0",
+    "lzo": "^0.4.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.2.0"
-  },
-  "scripts": {
-    "test": "mocha"
-  },
-  "engines": {
-    "node": ">=7.6"
   }
 }
